# XCPlite

./: .gitignore  CMakeLists.txt  README.md
src/: xcpAppl.c
